fixed friendslist btn cutoff, remove steam id, centered random game container

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -415,7 +415,11 @@ td.owned-games-actions {
 } */
 
 th.action-friends-list {
-  width: 40%;
+  /* width: 40%; */
+}
+
+.friends-list-table {
+  max-width: 875px;
 }
 
 .action-btn {
@@ -449,10 +453,6 @@ th.action-friends-list {
 
 .custom-table {
   box-shadow: 6px 6px 10px 1px rgba(0, 0, 0, 0.3);
-}
-
-.friends-list-table {
-  width: 1000px;
 }
 
 .compare-games-table-container {
@@ -756,7 +756,7 @@ img.game-icon {
 
 .friends-list-container {
   background-image: url("../images/placeholder.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0), rgb(29, 179, 0, 1) 100%);
+  background: linear-gradient(rgba(0, 0, 0, 0), rgb(179, 161, 0) 100%);
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -768,7 +768,7 @@ img.game-icon {
 }
 
 .friends-list-container:hover {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgb(40, 239, 0) 100%);
+  background: linear-gradient(rgba(0, 0, 0, 0), rgb(239, 223, 0) 100%);
   transition: 200ms ease-in-out;
 }
 
@@ -931,20 +931,7 @@ Goes from RIGHT to LEFT
 
 /* FADE IN ANIMATION/KEYFRAMES */
 .admin-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  row-gap: 15px;
-
-  font-size: 24px;
-  min-width: 70vw;
-  min-height: 400px;
-  /* border: 2px solid #0d6efd; */
-  /* margin: 0 auto; */
-  margin-left: 15vw;
-  margin-top: 2vw;
+  margin-top: 3vw;
 
   color: white;
   background-color: #131d2a;
